Update chat interface: change AI name to FRAUAS Chat, add emojis to opportunities/limitations, improve styling and translations

--- a/.env.example
+++ b/.env.example
@@ -43,7 +43,7 @@
 
 
 PROJECT_NAME=hawki2
-APP_NAME= HAWKI2
+APP_NAME= "FRAUAS Chat"
 APP_URL= http://127.0.0.1:8000
 APP_ENV= local
 APP_DEBUG= true
